# robotframework-myfirstlibrary

./: .gitignore  pyproject.toml  tasks.py
.github/workflows/: ci.yml
MyFirstLibrary/: __init__.py  myfirstlibrary.py
atest/: atest.robot
docs/: README.md  myfirstlibrary.html
utest/: test_myfirstlibrary.py
