[tool.poetry]
name = "robotframework-myfirstlibrary"
version = "0.0.2"
description = "A template for creating new robotframework libraries"
license = "Apache-2.0"
authors = ["Many Kasiriha"]
maintainers = ["Many Kasiriha"]
readme = "./docs/README.md"
homepage = "https://github.com/manykarim/robotframework-myfirstlibrary"
packages = [
    { include = "MyFirstLibrary" },
]

[tool.poetry.dependencies]
python = "^3.8"
robotframework = ">=4"
robotframework-pythonlibcore = ">=3"
opencv-python = "^4.5.5"

[tool.poetry.dev-dependencies]
pytest = "*"
invoke = "*"
coverage = "^6.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
